# overture-schema-pydantic

./: LICENSE  README.md  pyproject.toml
src/overture_schema_pydantic/: constraint.py  divisions.py  feature.py  geometry.py  id.py  language.py  names.py  source.py  type.py
src/overture_schema_pydantic/codegen/: schema_spark.py  typescript_types.py  validate_spark.py  zod.py
tests/: test_feature.py  test_geometry.py  test_id.py  test_scoping.py
