[project]
name = "overture-schema-pydantic"
version = "0.1.0"
description = ""
authors = [
    {name = "schapper",email = "schapper@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "libcst (>=1.8.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "overture_schema_pydantic", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-subtests = "^0.14.2"
black = "^25.1.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

